# kavisnet

./: .gitignore  .kurallar  CODEX.md  Cargo.toml  faz.md  faz_iskeler.md
.claude/: settings.local.json
.github/workflows/: build.yml
.zed/: launch.json  tasks.json
kutuphaneler/calisma_sekmeleri/: Cargo.toml
kutuphaneler/modul_sistemi/: Cargo.toml
kutuphaneler/ortak_bilesenler/: Cargo.toml
kutuphaneler/ortak_ikonlar/: Cargo.toml
kutuphaneler/ortak_ikonlar/src/: lib.rs
kutuphaneler/ortak_tema/: Cargo.toml
kutuphaneler/ortak_tema/src/: lib.rs
kutuphaneler/ortak_tipler/: Cargo.toml
kutuphaneler/sol_menu/: Cargo.toml
kutuphaneler/sol_menu/src/: lib.rs
kutuphaneler/sunucu_istemcisi/: Cargo.toml
kutuphaneler/tema/: Cargo.toml
kutuphaneler/uygulama_kabugu/: Cargo.toml
kutuphaneler/uygulama_kabugu/src/: ana_panel.rs  csd_golge.rs  kontroller.rs  kontroller_linux.rs  lib.rs  linux_ikon.rs  pencere.rs  ust_bar.rs
moduller/arsiv/: Cargo.toml
moduller/arsiv/src/: lib.rs
moduller/kullanici_yonetimi/: Cargo.toml
moduller/kurum/: Cargo.toml
moduller/yetki/: Cargo.toml
src/: main.rs  tema.rs
uygulama/: Cargo.toml  build.rs
uygulama/src/: main.rs
