[package]
name = "ortak_tema"
version.workspace = true
edition.workspace = true

[dependencies]
gpui.workspace = true
serde.workspace = true
toml.workspace = true
dirs.workspace = true
notify.workspace = true
dark-light.workspace = true
schemars.workspace = true
serde_json.workspace = true
chrono = "0.4"
smol = "2"
